# docs/swagger.yaml
@@ -90,9 +90,41 @@ definitions:
         type: string
       city:
         type: string
+      email:
+        type: string
+      fullName:
+        type: string
       planID:
         type: string
       userID:
+        type: string
+    type: object
+  http.FriendUpsertRequest:
+    properties:
+      birthDate:
+        type: string
+      city:
+        type: string
+      gender:
+        type: string
+      name:
+        type: string
+      userRelation:
+        type: string
+    type: object
+  http.UserUpsertRequest:
+    properties:
+      active:
+        type: boolean
+      birthDate:
+        type: string
+      city:
+        type: string
+      email:
+        type: string
+      fullName:
+        type: string
+      planId:
         type: string
     type: object
 host: localhost:8080
@@ -132,6 +164,49 @@ paths:
       summary: Buscar amigo
       tags:
       - friends
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID do amigo
+        in: path
+        name: friend_id
+        required: true
+        type: string
+      - description: Dados a atualizar
+        in: body
+        name: friend
+        required: true
+        schema:
+          $ref: '#/definitions/http.FriendUpsertRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Friend'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Atualizar amigo
+      tags:
+      - friends
   /friends/{friend_id}/gifts:
     get:
       parameters:
@@ -158,7 +233,7 @@ paths:
       summary: Listar sugestões de presente
       tags:
       - gifts
-    post:
+    put:
       consumes:
       - application/json
       parameters:
@@ -262,8 +337,96 @@ paths:
       summary: Criar ou atualizar perfil do amigo
       tags:
       - profiles
-  /users:
+  /gifts/{gift_id}:
     post:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID do presente
+        in: path
+        name: gift_id
+        required: true
+        type: string
+      - description: Dados a atualizar
+        in: body
+        name: gift
+        required: true
+        schema:
+          $ref: '#/definitions/domain.Gift'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Gift'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Atualizar sugestão de presente
+      tags:
+      - gifts
+  /reminders/{reminder_id}:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID do lembrete
+        in: path
+        name: reminder_id
+        required: true
+        type: string
+      - description: Dados a atualizar
+        in: body
+        name: reminder
+        required: true
+        schema:
+          $ref: '#/definitions/domain.Reminder'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Reminder'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Atualizar lembrete
+      tags:
+      - reminders
+  /users:
+    put:
       consumes:
       - application/json
       parameters:
@@ -272,7 +435,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/domain.User'
+          $ref: '#/definitions/http.UserUpsertRequest'
       produces:
       - application/json
       responses:
@@ -282,6 +445,12 @@ paths:
             $ref: '#/definitions/domain.User'
         "400":
           description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "409":
+          description: Conflict
           schema:
             additionalProperties:
               type: string
@@ -325,6 +494,55 @@ paths:
       summary: Buscar usuário
       tags:
       - users
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID do usuário
+        in: path
+        name: user_id
+        required: true
+        type: string
+      - description: Dados a atualizar
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/http.UserUpsertRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.User'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "409":
+          description: Conflict
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Atualizar usuário
+      tags:
+      - users
   /users/{user_id}/friends:
     get:
       parameters:
@@ -351,7 +569,7 @@ paths:
       summary: Listar amigos do usuário
       tags:
       - friends
-    post:
+    put:
       consumes:
       - application/json
       parameters:
@@ -365,7 +583,7 @@ paths:
         name: friend
         required: true
         schema:
-          $ref: '#/definitions/domain.Friend'
+          $ref: '#/definitions/http.FriendUpsertRequest'
       produces:
       - application/json
       responses:
@@ -414,7 +632,7 @@ paths:
       summary: Listar lembretes do usuário
       tags:
       - reminders
-    post:
+    put:
       consumes:
       - application/json
       parameters:
